force-app/main/default/src/objects/DruvainSyncProd__InsyncConf__c/DruvainSyncProd__InsyncConf__c.object-meta.xml
<CustomObject>
    <description>This is the object for communication with Insync.</description>
    <label>InsyncConf</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>InsyncConf Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InsyncConf</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>