force-app/main/default/src/objects/DruvainSyncProd__InsyncConf__c/fields/DruvainSyncProd__action__c.field-meta.xml
<CustomField>
    <fullName>DruvainSyncProd__action__c</fullName>
    <description>This field gets the action sent.</description>
    <label>action</label>
    <precision>15</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>