force-app/main/default/src/objects/DruvainSyncProd__InsyncConf__c/fields/DruvainSyncProd__endpoint__c.field-meta.xml
<CustomField>
    <fullName>DruvainSyncProd__endpoint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>