force-app/main/default/src/objects/DruvainSyncProd__InsyncConf__c/fields/DruvainSyncProd__key__c.field-meta.xml
<CustomField>
    <fullName>DruvainSyncProd__key__c</fullName>
    <description>This field gets the key sent.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>key</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>