force-app/main/default/src/objects/DruvainSyncProd__InsyncConf__c/fields/DruvainSyncProd__username__c.field-meta.xml
<CustomField>
    <fullName>DruvainSyncProd__username__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>username</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>