force-app/main/default/src/objects/DruvainSyncProd__InsyncConf__c/listViews/DruvainSyncProd__All.listView-meta.xml
<ListView>
    <fullName>DruvainSyncProd__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>